Fase 7: casos de teste próprios e compatibilidade com Java 8
- Caso 1 (instruções): SYSCALL 2, BRNEG, BRZERO, BRANY, MULT e DIV
  com negativos; entrada redirecionável em configs/caso1_entrada.txt.
- Caso 2 (escalonamento): desempate FIFO na Fila 1 e duas preempções
  por retorno de I/O com retorno ao topo do grupo e quantum restante.
- Resultados esperados, calculados à mão, nos comentários das configs.
- QueueTest usa Arrays.asList: o projeto compila com --release 8.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>